--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,22 @@
 	font-family: 'Kumar One Outline';
 	src: url('../assets/fonts/Kumar_One_Outline/KumarOneOutline-Regular.ttf') format('truetype'); /* Safari, Android, iOS */
 }
+
+.tag_list {
+	display: flex;
+	justify-content: flex-start;
+
+	.tag {
+		background-color: $gray-aaa;
+		margin-right: 5px;
+		padding: 5px;
+		border-radius: 4px;
+		font-size: 12px;
+		color: $gray-f3;
+
+		&:hover {
+			background-color: $green;
+			color: $white;
+		}
+	}
+}
