--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -18,6 +18,8 @@ $yellow: #ffbf00;
 $white: #fff;
 $black: #000;
 $gray-333: #333;
+$gray-666: #666;
+$gray-999: #999;
 $gray-aaa: #aaa;
 $gray-ccc: #ccc;
 $gray-ddd: #ddd;
@@ -47,6 +49,7 @@ $font-size-base: 14px;
 $bodyWidth: 1200px;
 $colWidth: floor($bodyWidth /24);
 $headerHeight: 60px;
+$footerHeight: 80px;
 
 /* mixins */
 @mixin wh($width, $height) {
