--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,7 +5,7 @@
 
 * {
 	box-sizing: border-box;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); //  remove tap highlight color for mobile safari
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); //  remove tap highlightjs color for mobile safari
 }
 
 *:before,
